--- a/src/SD/webroot/index.html
+++ b/src/SD/webroot/index.html
@@ -1,98 +1,139 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+﻿<!DOCTYPE html>
+<html lang="sp">
 <head>
-    <title>Netduino Admin</title>
-    <script type="text/javascript">
-        function load() {
-            var chk1 = document.getElementById('chkRelay1');
-            if (getRelayState(1) == "True")
-                chk1.checked = true;
-            else
-                chk1.checked = false;
 
-            var chk2 = document.getElementById('chkRelay2');
-            if (getRelayState(2) == "True")
-                chk2.checked = true;
-            else
-                chk2.checked = false;
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-            var chk3 = document.getElementById('chkRelay3');
-            if (getRelayState(3) == "True")
-                chk3.checked = true;
-            else
-                chk3.checked = false;
+    <title>GrowControl Device | JAM Tech 2017</title>
 
-            var chk4 = document.getElementById('chkRelay4');
-            if (getRelayState(4) == "True")
-                    chk4.checked = true;
-                else
-                    chk4.checked = false;
-        }
-        function changeRelayState(val, state) {
-            var url = "/relay" + val + "?value=";
-            if (state)
-                url = url + "true";
-            else
-                url = url + "false";
+    <link href="https://inspiniafull.herokuapp.com/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-
-            var res= httpGet(url);
-
-            var chk = document.getElementById('chkRelay' + val);
-            if (res == "True")
-                chk.checked = true;
-            else
-                chk.checked = false;
-        }
-        function getRelayState(val) {
-            var url = "/relay" + val;
-            return httpGet(url);            
-        }
-        function httpGet(theUrl) {
-            var xmlHttp = null;
-
-            xmlHttp = new XMLHttpRequest({ mozSystem: true });
-            xmlHttp.open("GET", theUrl, false);
-            xmlHttp.send(null);
-            return xmlHttp.responseText;
-        }
-    </script>
+    <link href="https://inspiniafull.herokuapp.com/css/animate.min.css" rel="stylesheet">
+    <link href="https://inspiniafull.herokuapp.com/css/style.min.css" rel="stylesheet">
+	
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/switchery/0.8.2/switchery.min.css" rel="stylesheet">
 </head>
-    <body onload="load();">
-        <div>
-            Relay ON
-            <div>
-                <input type="button" onclick="changeRelayState(1,true);" name="relay1" value="Relay 1" />
-                <input type="button" onclick="changeRelayState(2,true);" name="relay2" value="Relay 2" />
-                <input type="button" onclick="changeRelayState(3,true);" name="relay3" value="Relay 3" />
-                <input type="button" onclick="changeRelayState(4,true);" name="relay4" value="Relay 4" />
+
+<body>
+
+<div id="wrapper">
+
+    <nav class="navbar-default navbar-static-side" role="navigation">
+        <div class="sidebar-collapse">
+            <ul class="nav" id="side-menu">
+                <li class="nav-header">
+                    <div class="dropdown profile-element">
+                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                                   <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">Jorge</strong>
+                                                        </span> <span class="text-muted text-xs block">Admin<b class="caret"></b></span> </span> </a>
+                        <ul class="dropdown-menu animated fadeInRight m-t-xs">
+                            <li><a href="login.html">Logout</a></li>
+                        </ul>
+                    </div>
+                    <div class="logo-element">
+                        JT+
+                    </div>
+                </li>
+                <li class="active">
+                    <a href="index.html"><i class="fa fa-th-large"></i> <span class="nav-label">Main Dashboard</span></a>
+                </li>
+                <!--<li>
+                    <a href="minor.html"><i class="fa fa-th-large"></i> <span class="nav-label">Minor view</span> </a>
+                </li>-->
+            </ul>
+
+        </div>
+    </nav>
+
+    <div id="page-wrapper" class="gray-bg">
+        <div class="row border-bottom">
+            <nav class="navbar navbar-static-top white-bg" role="navigation" style="margin-bottom: 0">
+                <div class="navbar-header">
+                    <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
+                    <form role="search" class="navbar-form-custom" method="post" onsubmit="return pageFilter(this);">
+                        <div class="form-group">
+                            <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search">
+                        </div>
+                    </form>
+                </div>
+                <ul class="nav navbar-top-links navbar-right">
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-sign-out"></i> Log out
+                        </a>
+                    </li>
+                </ul>
+
+            </nav>
+        </div>
+        <div class="wrapper wrapper-content animated fadeInRight">
+            <div class="row">
+                <div class="ibox float-e-margins">
+                        <div class="ibox-title">
+                            <h5>Netduino 3 Wifi + 8 Relay Shield</h5>
+                            <div class="ibox-tools">
+                                <a class="collapse-link">
+                                    <i class="fa fa-chevron-up"></i>
+                                </a>
+                                <a class="refresh-link" onclick="load();">
+                                    <i class="fa fa-refresh"></i>
+                                </a>
+                            </div>
+                        </div>
+                    <div class="ibox-content">
+                        <h3>
+                            GrowControl
+                       </h3>
+                        <p>
+                            Control your grow Remotely!!
+                        </p>
+                        
+                        <p>
+                            Lights:&nbsp;&nbsp;<input type="checkbox" id="chkRelay1" class="js-switch" onchange="changeRelayState(1,this.checked);" />
+                        </p>
+                        <p>
+                            Camera:&nbsp;&nbsp;<input type="checkbox" id="chkRelay2" class="js-switch2" onchange="changeRelayState(2,this.checked);" />
+                        </p>
+                        <p>
+                            Ventilation:&nbsp;&nbsp;<input type="checkbox" id="chkRelay3" class="js-switch3" onchange="changeRelayState(3,this.checked);" />
+                        </p>
+                        <p>
+                           Water:&nbsp;&nbsp;<input type="checkbox" id="chkRelay4" class="js-switch4" onchange="changeRelayState(4,this.checked);" />
+                        </p>
+                        <br/>
+                        <br/>
+                    </div>
+                </div>
             </div>
         </div>
-        <div>
-            Relay OFF
+        <div class="footer">
+            <div class="pull-right">
+                0 of <strong>4</strong> Free sockets.
+            </div>
             <div>
-                <input type="button" onclick="changeRelayState(1,false);" name="relay1" value="Relay 1" />
-                <input type="button" onclick="changeRelayState(2,false);" name="relay2" value="Relay 2" />
-                <input type="button" onclick="changeRelayState(3,false);" name="relay3" value="Relay 3" />
-                <input type="button" onclick="changeRelayState(4,false);" name="relay4" value="Relay 4" />
+                <strong>Copyright</strong> JAM Tech &copy; 2014-2017
             </div>
         </div>
-        <div>
-            <table>
-                <tr>
-                    <td>Relay 1</td>
-                    <td>Relay 2</td>
-                    <td>Relay 3</td>
-                    <td>Relay 4</td>
-                </tr>
-                <tr>
-                    <td><input type="checkbox" id="chkRelay1"/></td>
-                    <td><input type="checkbox" id="chkRelay2"/></td>
-                    <td><input type="checkbox" id="chkRelay3"/></td>
-                    <td><input type="checkbox" id="chkRelay4"/></td>
-                </tr>
-            </table>
-        </div>
-    </body>
+
+    </div>
+</div>
+
+<!-- Mainly scripts -->
+<script src="https://inspiniafull.herokuapp.com/lib_bower/jquery/dist/jquery.min.js"></script>
+<script src="https://inspiniafull.herokuapp.com/lib_bower/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/metisMenu/2.6.1/metisMenu.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-slimScroll/1.3.8/jquery.slimscroll.min.js"></script>
+
+<!-- Custom and plugin javascript -->
+<script src="js/inspinia.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.min.js"></script>
+
+<!-- Switchery -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/switchery/0.8.2/switchery.min.js"></script>
+
+<script src="js/app.js"></script>
+</body>
+
 </html>
