--- a/src/SD/webroot/index.html
+++ b/src/SD/webroot/index.html
@@ -9,17 +9,15 @@
 
     <link href="https://inspiniafull.herokuapp.com/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
     <link href="https://inspiniafull.herokuapp.com/css/animate.min.css" rel="stylesheet">
     <link href="https://inspiniafull.herokuapp.com/css/style.min.css" rel="stylesheet">
-	
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/switchery/0.8.2/switchery.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
 </head>
 
 <body>
 
 <div id="wrapper">
-
     <nav class="navbar-default navbar-static-side" role="navigation">
         <div class="sidebar-collapse">
             <ul class="nav" id="side-menu">
